Adicionando rascunho das páginas de login

--- a/criar_conta.htm
+++ b/criar_conta.htm
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" href="style.css">
 
-    <title>Nome do app</title>
+    <title>Criar conta</title>
 </head>
 <body>
     <header>
@@ -29,5 +29,29 @@
             </nav>
         </div>
     </header>
+    <div class = "container">
+        <div class="justify-content-center align-items-center row">
+            <div class="col-4">
+                <form class="form-inline">
+                    <div class="form-group">
+                        <input type="text" placeholder="Nome" class="form-control"/>
+                    </div>
+                    <div class="form-group">
+                        <input type="text" placeholder="Sobrenome" class="form-control"/>
+                    </div> 
+                    <div class="form-group">
+                        <input type="text" placeholder="Nome de Usuário" class="form-control"/>
+                    </div>    
+                    <div class="input-group">
+                        <input type="text" placeholder="Senha" class="form-control"/>
+                        <input type="text" placeholder="Confirmar" class="form-control"/>
+                    </div>
+                    <div>
+                        <a class="btn btn-success btn-block1" href="index.html" role="button">Finalizar</a> 
+                    </div>
+                </form>
+            </div>
+        </div> 
+    </div>
 </body>
 </html>
