--- a/login.htm
+++ b/login.htm
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" href="style.css">
 
-    <title>Nome do app</title>
+    <title>Login</title>
 </head>
 <body>
     <header>
@@ -29,5 +29,26 @@
             </nav>
         </div>
     </header>
+    <div class = "container">
+        <div class="justify-content-center align-items-center row">
+            <div class="col-4">
+                <form class="formlogin">
+                    <div class="text-center mb-3">
+                        <h2>Fazer login</h2>
+                    </div>
+                    <div class="form-group">
+                        <input type="text" placeholder="Informe seu usuário" class="form-control"/>
+                    </div>
+                    <div class="form-group">
+                        <input type="password" placeholder="Informe sua senha" class="form-control"/>
+                    </div>
+                    <div>
+                        <a class="btn btn-primary btn-block" href="criar_conta.htm" role="button">Criar conta</a>
+                        <a class="btn btn-success btn-block" href="#" role="button">Logar no sistema</a> 
+                    </div>
+                <form>
+            </div>
+        </div> 
+    </div>
 </body>
 </html>
