--- a/criar_conta.htm
+++ b/criar_conta.htm
@@ -20,7 +20,7 @@
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbar-links">
                 <div class="navbar-nav">
-                  <a class="nav-item nav-link" id="home-menu" href="index.html">Home</span></a>
+                  <a class="nav-item nav-link" id="home-menu" href="index.html">Home</a>
                   <a class="nav-item nav-link" id="services-menu" href="#">Serviços</a>
                   <a class="nav-item nav-link" id="team-menu" href="#">Desenvolvedores</a>
                   <a class="nav-item nav-link" id="portfolio-menu" href="login.htm">Login</a>
@@ -47,7 +47,7 @@
                         <input type="text" placeholder="Confirmar" class="form-control"/>
                     </div>
                     <div>
-                        <a class="btn btn-success btn-block1" href="index.html" role="button">Finalizar</a> 
+                        <a class="btn btn-success btn-block_conta" href="index.html" role="button">Finalizar</a> 
                     </div>
                 </form>
             </div>
