--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbar-links">
                 <div class="navbar-nav">
-                  <a class="nav-item nav-link" id="home-menu" href="index.html">Home</span></a>
+                  <a class="nav-item nav-link" id="home-menu" href="index.html">Home</a>
                   <a class="nav-item nav-link" id="services-menu" href="#">Serviços</a>
                   <a class="nav-item nav-link" id="team-menu" href="#">Desenvolvedores</a>
                   <a class="nav-item nav-link" id="portfolio-menu" href="login.htm">Login</a>
