Corrigindo tipo do input da senha em criar_conta.htm

--- a/criar_conta.htm
+++ b/criar_conta.htm
@@ -43,8 +43,8 @@
                         <input type="text" placeholder="Nome de Usuário" class="form-control"/>
                     </div>    
                     <div class="input-group">
-                        <input type="text" placeholder="Senha" class="form-control"/>
-                        <input type="text" placeholder="Confirmar" class="form-control"/>
+                        <input type="password" placeholder="Senha" class="form-control"/>
+                        <input type="password" placeholder="Confirmar" class="form-control"/>
                     </div>
                     <div>
                         <a class="btn btn-success btn-block_conta" href="index.html" role="button">Finalizar</a> 
