--- a/criar_conta.htm
+++ b/criar_conta.htm
@@ -22,7 +22,7 @@
                 <div class="navbar-nav">
                   <a class="nav-item nav-link" id="home-menu" href="index.html">Home</span></a>
                   <a class="nav-item nav-link" id="services-menu" href="#">Serviços</a>
-                  <a class="nav-item nav-link" id="team-menu" href="#">Desenvolvedores</a>
+                  <a class="nav-item nav-link" id="team-menu" href="desenvolvedores.htm">Desenvolvedores</a>
                   <a class="nav-item nav-link" id="portfolio-menu" href="login.htm">Login</a>
                 </div>
               </div>
