--- a/criar_conta.htm
+++ b/criar_conta.htm
@@ -8,7 +8,7 @@
 
     <title>Criar conta</title>
 </head>
-<body>
+<body class="body-login">
     <header>
         <div class = "container" id = 'nav-container'>
             <nav class = "navbar navbar-expand-lg fixed-top">
