--- a/login.htm
+++ b/login.htm
@@ -8,7 +8,7 @@
 
     <title>Login</title>
 </head>
-<body>
+<body class="body-login">
     <header>
         <div class = "container" id = 'nav-container'>
             <nav class = "navbar navbar-expand-lg fixed-top">
