Alterei o texto do botão para criar atividade

--- a/criar_atv.html
+++ b/criar_atv.html
@@ -75,7 +75,7 @@
                     </div>
                     <div>
                         <a class="btn btn-danger btn-block" href="servicos_atv.html" role="button">Cancelar</a>
-                        <a class="btn btn-success btn-block" href="#" role="button">Começar hábito!</a> 
+                        <a class="btn btn-success btn-block" href="#" role="button">Criar atividade</a> 
                     </div>
                 </form>
             </div>
