Ajeitei algumas coisas. Ainda tentando achar um jeito de não bugar a barra de navegação.

--- a/desenvolvedores.htm
+++ b/desenvolvedores.htm
@@ -65,7 +65,7 @@
             <div class="card">
               <a class="card-link" href="#jairon"><img src="img/jairon.jpg" class="card-img-top" alt="Imagem de Perfil 3">
                 <div class="card-body">
-                  <h5 class="card-title">Jairon Batista</h5>
+                  <h5 class="card-title">Jairon Henrique</h5>
                   <p class="card-text">Matemática Aplicada - FGV EMAp</p>
                 </div>
               </a>
@@ -88,52 +88,29 @@
       </div>
     </div>
 
-    <div class="container-fluid">
+    <div class="container" id="amanda">
       <div class = "row">
-        <h1 id="amanda">Amanda Perez</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-        </p>
+        <div class="col-md-8">
+          <h1>Amanda Perez</h1>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
+            </p>
+        </div>
+        <div class="col-md-4">
+          <img class="img-fluid" src="img/amanda.jpg" alt=""/>
+        </div>
       </div>
     </div>
 
-    <div class="container-fluid">
+    <div class="container" id="ezequiel">
       <div class = "row">
-        <h1 id="ezequiel">Ezequiel Braga</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-        </p>
-      </div>
-    </div>
-
-    <div class="container-fluid">
-      <div class = "row">
-        <h1 id="jairon">Jairon Batista</h1>
+        <h1>Ezequiel Braga</h1>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
@@ -152,9 +129,9 @@
       </div>
     </div>
 
-    <div class="container-fluid">
+    <div class="container" id="jairon">
       <div class = "row">
-        <h1 id="sofia">Sofia Lakschevitz</h1>
+        <h1>Jairon Henrique</h1>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
@@ -173,6 +150,26 @@
       </div>
     </div>
 
+    <div class="container" id="sofia">
+      <div class = "row">
+        <h1>Sofia Lakschevitz</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
+        </p>
+      </div>
+    </div>
 
   
 
