Pequenas alterações e correções

--- a/servicos_atv.html
+++ b/servicos_atv.html
@@ -38,7 +38,7 @@
     </header>
     
     <div class="container-fluid">
-        <div class="card text-center" id="card-servicos">
+        <div class="card text-center" id="card-servicos1">
             <div class="card-header">
             <ul class="nav nav-tabs card-header-tabs">
                 <li class="nav-item">
