--- a/servicos_pomodoro.html
+++ b/servicos_pomodoro.html
@@ -38,7 +38,7 @@
     </header>
     
     <div class="container-fluid">
-        <div class="card text-center" id="card-servicos">
+        <div class="card text-center" id="card-servicos2">
             <div class="card-header">
             <ul class="nav nav-tabs card-header-tabs">
                 <li class="nav-item">
@@ -54,7 +54,7 @@
             </div>
             <div class="card-body">
             <!--<h5 class="card-title">Título especial</h5>-->
-            <p class="card-text">POMODORO</p>
+            <p class="card-text">[Pensar em como vamos fazer o pomodoro.]</p>
             <a href="#" class="btn btn-primary">Iniciar Pomodoro</a>
             </div>
         </div>
