--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
     <title>Nome do app</title> 
@@ -31,7 +32,7 @@
         </div>
     </header>
 
-    <main>   
+  <main>   
     <div class="container-fluid">
         <!-- Slider -->
         <div id="mainSlider" class="carousel slide" data-bs-ride="carousel">
@@ -98,38 +99,60 @@
               <span class="visually-hidden">Next</span>
             </button>
         </div>
-        </div>
+      </div>
         
         
-        <!-- Nome dessa seção -->
+        <!-- sobre o app -->
 
         <div id="about-area">
             <div class="container">
                 <div class="row">
                   <div class="col-12"> 
-                    <h3 class="main-title">Sobre a hDC Agency</h3>
+                    <h3 id="Conheça" class="main-title">Conheça o S.T.A.R.F.O.C.U.S</h3>
                   </div>
-                  <div class="col-md-6">
-                    <img class="img-fluid" src="img/logotipo.jpg" alt="Agência hDC">
+                  <div class="col-1"> </div>
+                  <div class="col-4 text-center">
+                    <img class="img-fluid" src="img/escalar_até_estrelas.jpg" alt="escalar até estrelas">
                   </div>
-                  <div class="col-md-6">
-                    <h3 class="about-title">Uma agência que pensa no futuro</h3>
-                    <p>Nossos projetos são adaptados ao cliente e seu propósito.</p>
-                    <p>Após a especificação do projetos os arquitetos de software definirão as melhores tecnologias para seu projeto.</p>
-                    <p>E nossos designers trabalharão na sua interface/layout para impulsionar o negócio.</p>
-                    <p>Veja outros diferenciais:</p>
+                  <div class="col-1"> </div>
+                  <div class="col-6">
+                    <h3 class="about-title">Escale até as Estrelas</h3>
+                    <p>Nossos objetivo é fazer você alcançar seus objetivos.</p>
+                    <p>Você poderá se planejar para obter melhores resultados.</p>
+                    <p>Se motive vendo o quanto você evoluiu.</p>
+                    <p>Você poderá administrar :</p>
                     <ul id="about-list">
-                      <li><i class="fas fa-check"></i> Utilização de Machine Learning / AI</li>
-                      <li><i class="fas fa-check"></i> Layout responsivo para todos os dispositivos</li>
-                      <li><i class="fas fa-check"></i> Integração com diversos sistemas do mercado</li>
-                      <li><i class="fas fa-check"></i> Sistema de pagamento próprio</li>
-                      <li><i class="fas fa-check"></i> Desenvolvimento com metodologia ágil</li>
+                      <li><i class="bi bi-star-fill"></i> Seus estudos</li>
+                      <li><i class="bi bi-star-fill"></i> Sua saúde</li>
+                      <li><i class="bi bi-star-fill"></i> Suas finanças</li>
+                      <li><i class="bi bi-star-fill"></i> Metas a serem compridas</li>
+                      <li><i class="bi bi-star-fill"></i> Sua vida pessoal</li>
                     </ul>
                   </div>
                 </div>
             </div>
+          </div>
+
+
+        <!-- Apelo final -->
+        <div id="about-area">
+          <div class="container" id = "apelo-container">
+              <div class="row align-items-center">
+                <div class="col-12"> 
+                  <h3 id="Conheça" class="main-title">Se interessou?</h3>
+                </div>
+                <div class="col-8 text-center">
+                  <h3 class="about-title">Então não perca tempo!</h3>
+                  <p> </p>
+                  <a href="login.htm" class="main-btn">Fazer login</a>
+                </div>
+                <div class="col-4">
+                  <img class="img-fluid" src="img/foguete.jpg" alt="foguete">
+                </div>
+              </div>
+              <div class="row"> <p>  </p> </div>
+          </div>
         </div>
-    </div>
     </main>
 
 
