Desenvolvedores com botões de rede social.

--- a/desenvolvedores.htm
+++ b/desenvolvedores.htm
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
 
     <title>Desenvolvedores</title>
@@ -100,8 +100,12 @@
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-              </p>
+            </p>
+            <a href="https://www.facebook.com/groups/139744391271439/user/100008703466803" target="_blank" class="bi bi-facebook"></a>
+            <a href="#" target="_blank" class="bi bi-discord"></a>
+            <a href="https://www.instagram.com/amanda.de.m.perez/" target="_blank" class="bi bi-instagram"></a>
+            <a href="#" target="_blank" class="bi bi-envelope-fill"></a>
+            <a href="https://github.com/Perez-Amanda" target="_blank" class="bi bi-github"></a>
           </div>
           <div class="col-md-4">
             <img class="img-fluid" src="img/amanda.jpg" alt=""/>
@@ -122,14 +126,12 @@
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
             </p>
+            <a href="https://www.facebook.com/profile.php?id=100008145907144" target="_blank" class="bi bi-facebook"></a>
+            <a href="#" target="_blank" class="bi bi-discord"></a>
+            <a href="https://www.instagram.com/ezequiel_braga_ebs/" target="_blank" class="bi bi-instagram"></a>
+            <a href="mailto: ezequielsantos2306@gmail.com" target="_blank" class="bi bi-envelope-fill"></a>
+            <a href="https://github.com/EzequielEBS" target="_blank" class="bi bi-github"></a>
           </div>
           <div class="col-md-4">
             <img class="img-fluid" src="img/ezequiel.jpg" alt=""/>
@@ -150,14 +152,12 @@
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
             </p>
+            <a href="https://www.facebook.com/jairon.batista.5" target="_blank" class="bi bi-facebook"></a>
+            <a href="#" target="_blank" class="bi bi-discord"></a>
+            <a href="https://www.instagram.com/jairon_henrique/" target="_blank" class="bi bi-instagram"></a>
+            <a href="mailto: henriquejairon@gmail.com" target="_blank" class="bi bi-envelope-fill"></a>
+            <a href="https://github.com/JaironHenrique" target="_blank" class="bi bi-github"></a>
           </div>
           <div class="col-md-4">
             <img class="img-fluid" src="img/jairon.jpg" alt=""/>
@@ -178,17 +178,15 @@
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
             </p>
+            <a href="https://www.facebook.com/sofia.laks.5/" target="_blank" class="bi bi-facebook"></a>
+            <a href="#" target="_blank" class="bi bi-discord"></a>
+            <a href="https://www.instagram.com/sofialakschevitz/" target="_blank" class="bi bi-instagram"></a>
+            <a href="mailto: sofia.laks15@gmail.com" target="_blank" class="bi bi-envelope-fill"></a>
+            <a href="https://github.com/sofialakschevitz" target="_blank" class="bi bi-github"></a>
           </div>
           <div class="col-md-4">
-            <img class="img-fluid" src="img/sofia.jpg" alt=""/>
+            <img class="img-fluid" src="img/sofia.jpg" alt="sol"/>
           </div>
         </div>
       </div>
